--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@craco/craco": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -13,11 +19,19 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-responsive": "^8.0.2",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
     "twin.macro": "^2.5.0",
     "typescript": "~4.1.5"
@@ -26,6 +40,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "schema:download": "npx apollo service:download --endpoint=http://localhost:9000/graphql ./src/app/graphql-schema.json",
+    "schema:generate-watch": "npx apollo codegen:generate --localSchemaFile=./src/app/graphql-schema.json --target=typescript --tagName=gql --watch",
+    "start:prod": "node ./server.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +61,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.4.0",
+    "@types/redux-logger": "^3.0.8",
+    "@types/styled-components": "^5.1.10",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
