--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cars",
+  "name": "react-cars-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.20",
-    "@brainhubeu/react-carousel": "^2.0.4",
+    "@apollo/client": "^3.3.19",
+    "@brainhubeu/react-carousel": "^2.0.3",
     "@craco/craco": "^6.1.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -21,7 +21,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-responsive": "^8.0.2",
     "express": "^4.17.1",
-    "graphql": "^15.5.1",
+    "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-calendar": "^3.4.0",
@@ -33,17 +33,17 @@
     "redux-logger": "^3.0.6",
     "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
-    "twin.macro": "^2.5.0",
+    "twin.macro": "^2.4.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "eject": "react-scripts eject",
     "schema:download": "npx apollo service:download --endpoint=http://localhost:9000/graphql ./src/app/graphql-schema.json",
     "schema:generate-watch": "npx apollo codegen:generate --localSchemaFile=./src/app/graphql-schema.json --target=typescript --tagName=gql --watch",
-    "start:prod": "node ./server.js",
-    "eject": "react-scripts eject"
+    "start:prod": "node ./server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,11 +61,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-calendar": "^3.4.0",
+    "@types/react-calendar": "^3.1.6",
     "@types/redux-logger": "^3.0.8",
-    "@types/styled-components": "^5.1.10",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
+    "@types/styled-components": "^5.1.9",
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
